--- a/docs/04 Metabolische Störungen/Metabolische Alkalose.mdx
+++ b/docs/04 Metabolische Störungen/Metabolische Alkalose.mdx
@@ -1,5 +1,5 @@
 **1** erwartete Kompensation berechnen: erwarteter PaCO<sub>2</sub> (mmHg) = (0,7 x HCO<sub>3</sub><sup>-</sup>) + 20
-- gemssen +/- 5 berechnet → **adäquate Kompensation**
+- gemessen +/- 5 berechnet → **adäquate Kompensation**
 - gemessen >5 berechnet → **zusätzliche respiratorische Azidose**
 - gemessen &lt;5 berechnet → **zusätzliche respiratorische Alkalose**
 
