--- a/docs/1 Grundlagen/3.1 Die erweiterte Interpretation der Blutgasanalyse bei metabolischen Störungen.mdx
+++ b/docs/1 Grundlagen/3.1 Die erweiterte Interpretation der Blutgasanalyse bei metabolischen Störungen.mdx
@@ -1,7 +1,7 @@
 ## Metabolische Azidose ##
 
 **1** Beurteilung des Kompensationsstatus  
-Formel: (1,5 x HCO<sub>3</sub><sup>-</sup>) + 8  
+Formel: berechnetes pCO<sub>2</sub> = (1,5 x HCO<sub>3</sub><sup>-</sup>) + 8  
 Faustregel: ca. letzten 2 Ziffern des ph-Werts  
 &ndash; gemessenes pCO<sub>2</sub> +/- 2 berechnetes pCO<sub>2</sub> → **adäquate Kompensation**  
 &ndash; gemessenes pCO<sub>2</sub> >2 berechnetes pCO<sub>2</sub> → **zusätzliche respiratorische Azidose (Hypoventilation)**  
