--- a/docs/4 Metabolische Störungen/Metabolische Alkalose.mdx
+++ b/docs/4 Metabolische Störungen/Metabolische Alkalose.mdx
@@ -1,6 +1,6 @@
 **1** erwartete Kompensation berechnen: erwarteter PaCO<sub>2</sub> (mmHg) = (0,7 x HCO<sub>3</sub><sup>-</sup>) + 20
 - gemessen +/- 5 berechnet → **adäquate Kompensation**
-- gemessen >5 berechnet → **zusätzliche respiratorische Azidose**
+- gemessen >5 berechnet → **zusätzliche respiratorische Azidose oder metabolische Azidose**
 - gemessen &lt;5 berechnet → **zusätzliche respiratorische Alkalose**
 
 **2** Urin-Cl<sup>-</sup> &lt; 10-20 mmol/l → **Volumenmangelbedingt: Erbrechen/Magensonde, Diuretika (früh nach Absetzen), Volumenmangel (Kontraktionsalkalose)**
