--- a/docs/1 Grundlagen/2.2 10-fälle.mdx
+++ b/docs/1 Grundlagen/2.2 10-fälle.mdx
@@ -4,7 +4,7 @@ title: 2.2 10 BGA-Übungsfälle
 
 import BGALernmodul from '@site/src/components/BGALernmodul';
 
-**Hinweis:** Werte sind vorgegeben. Du kreuzt nur an: Azidose/Alkalose · respiratorisch/metabolisch · Kompensation ja/nein.
+**Hinweis:** Werte sind vorgegeben. Kreuze an: Azidose/Alkalose · respiratorisch/metabolisch · Kompensation ja/nein.
 
 ---
 
