--- a/docs/4 Metabolische Störungen/Metabolische Alkalose.mdx
+++ b/docs/4 Metabolische Störungen/Metabolische Alkalose.mdx
@@ -1,20 +1,23 @@
-**1** erwartete Kompensation berechnen: erwarteter PaCO<sub>2</sub> (mmHg) = (0,7 x HCO<sub>3</sub><sup>-</sup>) + 20
-- gemessen +/- 5 berechnet → **adäquate Kompensation**
-- gemessen >5 berechnet → **zusätzliche respiratorische Azidose oder metabolische Azidose**
-- gemessen &lt;5 berechnet → **zusätzliche respiratorische Alkalose**
+**1** Anamnese und klinisches Setting konklusiv → **Erbrechen, Diuretika, Verzehr von Lakritz, exogene Bikarbonatquellen (bei möglicherweise reduzierter GFR), primärer Hyperaldosteronismus bekannt, nicht resorbierbare Anionen (z.B. hochdosierte Penicilline, Aminoglycoside)**  
+– inkonklusiv → **2**
 
-**2** Urin-Cl<sup>-</sup> &lt; 10-20 mmol/l → **Volumenmangelbedingt: Erbrechen/Magensonde, Diuretika (früh nach Absetzen), Volumenmangel (Kontraktionsalkalose)**
+<div class="center">*renaler Chloridverlust oder renale Chloridretention?*</div>
+<div class="center">*(1)	Niere verliert Chlorid => renale/hormonelle Ursache*</div>
+<div class="center">*(2)	Niere spart Chlorid => Volumen-/Chloridmangel*</div>
 
-<span className="small-text">Mechanismus: (1) Verlust von H<sub>+</sub> und Cl<sup>-</sup> (2) RAAS-Aktivierung → HCO<sub>3</sub><sup>-</sup>-Retention</span>
+**2** Urin-Cl- >20 mmol/l → **chloridresistente metabolische Alkalose, 4**  
+– Urin-Cl- &lt;20 mmol/l → chloridsensitive metabolische Alkalose / extrarenaler Chloridverlust → **3**  
+**3** Urin alkalisch + Na+↑ + K+↑ aber Cl-↓ → **Erbrechen, exogene alkalische Substanzen**  
+– Urin sauer + Na+↓ + K+↓ und Cl-↓ → **vorangegangenes Erbrechen, posthyperkapnischer Zustand, vorangegangene Diuretika**  
 
-- Urin-Cl > 20 mmol/l → **Volumenunabhängig: Mineralokortikoid-Exzess (Hyperaldosteronismus, Cushing), Hypokaliämie, persistierende Diuretikawirkung, seltene Ursachen (Bartter-Syndrom, Gitelman-Syndrom, Liddle-Syndrom)**
+<div class="center">*Hypertonie + Hypokaliämie + metabolische Alkalose = Mineralocorticoid-Exzess*</div>
+**4** EZV: hyperton + Hypokaliämie → **Mineralocorticoid-Exzess, 7**  
+– EZV: normoton + Hypokaliämie → **6**  
+**6** Urin-Ca2+ normal, (+ genetische Testung) → **Bartter-Syndrom**  
+– Urin-Ca2+ ↓, (+ genetische Testung) → **Gitelman-Syndrom**  
 
-**3** Volumenstatus beurteilen
-- Hypovolämie → **Erbrechen, Diuretika**
-- Normo-/Hypervolämie + Hypertonie → **Aldosteron-Exzess**
+**7** Renin↓ und Aldosteron ↑ → **primärer Hyperaldosteronismus**  
+– Renin↑ und Aldosteron↑ → **sekundärer Hyperaldosteronismus**  
+– Renin ↓ und Aldosteron ↓ → **Pseudohyperaldosteronismus bei Cushing Syndrom oder Liddle-Syndrom**  
 
-**4** Kalium berücksichtigen
-
-<span className="small-text">Hypokaliämie verstärkt die metabolische Alkalose durch (1) intrazelluläre H<sup>+</sup>-Verschiebung und (2) renale HCO<sub>3</sub><sup>+</sup>-Retention</span>
-- Hypokaliämie + Hypertonie → **Hyperaldosteronismus**
-- Hypokaliämie + normaler Blutdruck → **Bartter/Gitelman, Diuretika**
+? congenital adrenal hyperplasia due to 11β- or 17α-hydroxylase deficiency requires specific tests measuring the blood concentration of 11-deoxycorticosterone, corticosterone, renin, and aldosterone, as well as cortisol and its 17-hydroxylated precursors.
